--- a/css/pages/addListing/steps/location.css
+++ b/css/pages/addListing/steps/location.css
@@ -153,7 +153,7 @@
 .search-wrapper .validation-message {
     position: absolute;
     width: 100%;
-    margin-top: 0.5rem;
+    top: 3.7rem;
 }
 
 .search-wrapper .form-control.is-valid {
